[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Merriweather/Merriweather-Italic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/800px-Google_Images_2015_logo.svg.png" type="Texture" id=2]
[ext_resource path="res://Button_Menu.gd" type="Script" id=3]
[ext_resource path="res://Buttons_Nav.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Quiz" type="Node2D"]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1279.0
margin_bottom = 723.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1279.0
margin_bottom = 51.0

[node name="TitleText" type="Label" parent="VBoxContainer/Title"]
margin_right = 1279.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Test Question / Scene"
align = 1

[node name="Main" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 1279.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Main"]
margin_right = 825.0
margin_bottom = 613.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Example_image" type="TextureRect" parent="VBoxContainer/Main/CenterContainer"]
margin_left = 212.0
margin_top = 238.0
margin_right = 612.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="questionAnswer" type="VBoxContainer" parent="VBoxContainer/Main"]
margin_left = 829.0
margin_right = 1279.0
margin_bottom = 613.0

[node name="Example_Question" type="Label" parent="VBoxContainer/Main/questionAnswer"]
margin_right = 450.0
margin_bottom = 217.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "What is the best Star War? 
What happens if this question is really long? 
It will have to go on to different lines."
align = 1
autowrap = true

[node name="Answers" type="VBoxContainer" parent="VBoxContainer/Main/questionAnswer"]
margin_top = 221.0
margin_right = 450.0
margin_bottom = 461.0

[node name="Button" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_right = 450.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Answer 1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 61.0
margin_right = 450.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Answer 2"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 122.0
margin_right = 450.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Answer 3"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Test/information2.tscn"

[node name="Button4" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 183.0
margin_right = 450.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Answer 4"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 672.0
margin_right = 1279.0
margin_bottom = 723.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Navigation"]
margin_right = 518.0
margin_bottom = 51.0

[node name="Main_menu" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_right = 185.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
script = ExtResource( 3 )
scene_to_load = "res://MainMenu.tscn"

[node name="Start_quiz" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 189.0
margin_right = 347.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Start Quiz"
script = ExtResource( 3 )

[node name="Back_button" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 351.0
margin_right = 434.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Back"
script = ExtResource( 3 )
scene_to_load = "res://Test/information1.tscn"

[node name="Next_button" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 438.0
margin_right = 518.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Next"
script = ExtResource( 3 )
scene_to_load = "res://Test/information2.tscn"

[node name="Label" type="Label" parent="VBoxContainer/Navigation"]
margin_left = 522.0
margin_right = 1279.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "15,500"
align = 2
[connection signal="pressed" from="VBoxContainer/Main/questionAnswer/Answers/Button" to="VBoxContainer/Main/questionAnswer/Answers/Button" method="_on_Incorrect_Answer"]
[connection signal="pressed" from="VBoxContainer/Main/questionAnswer/Answers/Button2" to="VBoxContainer/Main/questionAnswer/Answers/Button2" method="_on_Incorrect_Answer"]
[connection signal="pressed" from="VBoxContainer/Main/questionAnswer/Answers/Button3" to="VBoxContainer/Main/questionAnswer/Answers/Button3" method="_on_Correct_Answer"]
[connection signal="pressed" from="VBoxContainer/Main/questionAnswer/Answers/Button4" to="VBoxContainer/Main/questionAnswer/Answers/Button4" method="_on_Incorrect_Answer"]
